# networkmanager-rs

./: Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  generate-nm-interfaces.sh
.github/workflows/: ci.yml
examples/: output_applied_connection.txt  print_all_devices.rs  print_con.rs  print_settings.rs  testing.rs
src/: accesspoint.rs  config.rs  connection.rs  dbus_api.rs  errors.rs  lib.rs  networkmanager.rs  settings.rs  settings_connection.rs  types.rs
src/api/: accesspoint.rs  config.rs  dbus.rs  dbus_api.rs  dbus_connector.rs  device.rs  devices.rs  errors.rs  mod.rs  networkmanager.rs  types.rs
src/api/devices/: any.rs  mod.rs  wired.rs  wireless.rs
src/configs/: dhcp4.rs  dhcp6.rs  ip4.rs  ip6.rs  mod.rs
src/devices/: adsl.rs  any.rs  bluetooth.rs  bond.rs  bridge.rs  bt.rs  dummy.rs  generic.rs  hsr.rs  infiniband.rs  ip_tunnel.rs  ipvlan.rs  lowpan.rs  macsec.rs  macvlan.rs  mod.rs  modem.rs  olpc_mesh.rs  veth.rs  wired.rs  wireless.rs
