[package]
name = "networkmanager"
version = "0.3.5"
authors = [
    "Tobias Tschinkowitz <tobias.tschinkowitz@icloud.com>",
    "Walter Bonetti",
]
description = "Bindings for the Linux NetworkManager"
repository = "https://github.com/truehumandesign/networkmanager-rs"
documentation = "https://docs.rs/networkmanager"
readme = "README.md"
categories = ["api-bindings", "network-programming", "os::unix-apis"]
keywords = ["networkmanager", "dbus", "wifi", "networking"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
dbus = "0.9"
num-traits = "0.2"
num-derive = "0.3"
